--- a/.github/workflows/packer-build.yml
+++ b/.github/workflows/packer-build.yml
@@ -2,8 +2,7 @@ name: "Packer checks"
 on:
   push:
     branches:
-      - master
-      - develop
+      - main
   pull_request:
     paths:
       - "images/**"
@@ -11,14 +10,14 @@ on:
       - "module/runners/templates/**"
 
 env:  
-  AWS_REGION: eu-west-1
+  AWS_REGION: us-east-2
 
 jobs:
   verify_packer:
     name: Verify packer    
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
-      image: hashicorp/packer:1.7.8
+      image: public.ecr.aws/hashicorp/packer:1.7.8
     strategy:
       matrix:
         image: ["linux-amzn2", "windows-core-2019", "ubuntu-focal"]
