--- a/.github/workflows/lambda-webhook.yml
+++ b/.github/workflows/lambda-webhook.yml
@@ -2,7 +2,7 @@ name: Lambda Webhook
 on:
   push:
     branches:
-      - develop
+      - main
   pull_request:
     paths:
       - .github/workflows/lambda-webhook.yml
@@ -10,8 +10,8 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    container: node:14
+    runs-on: self-hosted
+    container: public.ecr.aws/bitnami/node:14
     defaults:
       run:
         working-directory: modules/webhook/lambdas/webhook
